Navigation mobile display error fixed!

--- a/css/output.css
+++ b/css/output.css
@@ -1149,6 +1149,11 @@ body {
     border-color: rgb(161 161 161 / var(--tw-border-opacity));
   }
 
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
   .lg\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
